// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.securecomputation.controlplane;

import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.internal.securecomputation.controlplane";
option java_multiple_files = true;
option java_outer_classname = "WorkItemAttemptProto";

// Proto representation of the internal `WorkItemAttempt` entity type.
message WorkItemAttempt {
  string work_item_resource_id = 1;
  string work_item_attempt_resource_id = 2;

  // State of a `WorkItemAttempt`.
  enum State {
    // Default value if state is omitted.
    STATE_UNSPECIFIED = 0;

    // A `WorkItemAttempt` is in progress for this `WorkItem`.
    ACTIVE = 1;

    // The `WorkItem` has been successfully processed.
    SUCCEEDED = 2;

    // The subscriber failed to process the `WorkItem`.
    FAILED = 3;
  }

  // State of this `WorkItemAttempt`.
  State state = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // The attempt number for processing this `WorkItem`.
  int32 attempt_number = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Error messages recorded by the worker in case of failure for this
  // `WorkItemAttempt`.
  string error_message = 5 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (google.api.field_behavior) = OPTIONAL
  ];

  google.protobuf.Timestamp create_time = 6
      [(google.api.field_behavior) = OUTPUT_ONLY];
  google.protobuf.Timestamp update_time = 7
      [(google.api.field_behavior) = OUTPUT_ONLY];
}
